--- a/portfolio.html
+++ b/portfolio.html
@@ -82,21 +82,23 @@
 
           <ul class="category-list list">
             <li class="category-item">
-             <div class="overlay-category"> <a href="#" class="category-item-photo link">
-                <img
-                  src="./images/images-portfolio/blok1/phono1-banking-app.jpg"
-                  alt="banking app"
-                  width="360"
-                  height="300"
-                />
-                <p class="overlay-category-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
-                  App · Exotic Fruit Ecommerce App ·
-                  Cloud Storage App</p>
+              <a href="#" class="category-item-photo link">
+                <div class="overlay-category">
+                  <img
+                    src="./images/images-portfolio/blok1/phono1-banking-app.jpg"
+                    alt="banking app"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay-category-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="portfolio-titl-img overlay-portfolio-titl">
                   <h2 class="category-titl">Banking App Interface Concept</h2>
                   <p class="category-text main-text">App</p>
-                 
                 </div>
               </a>
             </li>
@@ -282,5 +284,6 @@
         </div>
       </div>
     </footer>
+   
   </body>
 </html>
