--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             >Web<span class="header-logo-studio styles-logo">Studio</span></a
           >
           <ul class="header-list list">
-            <li><a href="./index.html" class="header-item link">Studio</a></li>
+            <li><a href="./index.html" class="header-item activ-page link">Studio</a></li>
             <li>
               <a href="./portfolio.html" class="header-item link">Portfolio</a>
             </li>
@@ -459,9 +459,9 @@
     </footer>
     <!------------------------------  Modal Window -->
     
-    <div class="modal-box" data-modal>
+    <div class="modal-box is-hidden" data-modal>
       <div class="modal-window">
-        <button type="button" class="modal-dutton" data-modal-close>
+        <button type="button" class="modal-button" data-modal-close>
           <svg class="modal-icon"
           width="8"
           height="8" >
