--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,9 @@
           <ul class="header-list list">
             <li><a href="./index.html" class="header-item link">Studio</a></li>
             <li>
-              <a href="./portfolio.html" class="header-item link">Portfolio</a>
+              <a href="./portfolio.html" class="header-item activ-page link"
+                >Portfolio</a
+              >
             </li>
             <li><a href="" class="header-item link">Contacts</a></li>
           </ul>
@@ -103,13 +105,20 @@
               </a>
             </li>
             <li class="category-item">
-              <a href="#" class="category-item-photo link"
-                ><img
-                  src="./images/images-portfolio/blok1/photo2-cashless-payment.jpg"
-                  alt="cashless payment"
-                  width="360"
-                  height="300"
-                />
+              <a href="#" class="category-item-photo link">
+                <div class="overlay-category">
+                  <img
+                    src="./images/images-portfolio/blok1/photo2-cashless-payment.jpg"
+                    alt="cashless payment"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay-category-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-titl-img">
                   <h2 class="category-titl">Cashless Payment</h2>
                   <p class="category-text main-text">Marketing</p>
@@ -118,12 +127,19 @@
             </li>
             <li class="category-item">
               <a href="#" class="category-item-photo link"
-                ><img
-                  src="./images/images-portfolio/blok1/photo3-meditation-app.jpg"
-                  alt="meditation app"
-                  width="360"
-                  height="300"
-                />
+                ><div class="overlay-category">
+                  <img
+                    src="./images/images-portfolio/blok1/photo3-meditation-app.jpg"
+                    alt="meditation app"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay-category-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-titl-img">
                   <h2 class="category-titl">Meditation App</h2>
                   <p class="category-text main-text">App</p>
@@ -133,12 +149,19 @@
 
             <li class="category-item">
               <a href="#" class="category-item-photo link"
-                ><img
-                  src="./images/images-portfolio/blok2/photo1-taxi-service.jpg"
-                  alt="taxi service"
-                  width="360"
-                  height="300"
-                />
+                ><div class="overlay-category">
+                  <img
+                    src="./images/images-portfolio/blok2/photo1-taxi-service.jpg"
+                    alt="taxi service"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay-category-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-titl-img">
                   <h2 class="category-titl">Taxi Service</h2>
                   <p class="category-text main-text">Marketing</p>
@@ -147,12 +170,19 @@
             </li>
             <li class="category-item">
               <a href="#" class="category-item-photo link"
-                ><img
-                  src="./images/images-portfolio/blok2/photo2-screen-illustrations.jpg"
-                  alt="screen illustrations"
-                  width="360"
-                  height="300"
-                />
+                ><div class="overlay-category">
+                  <img
+                    src="./images/images-portfolio/blok2/photo2-screen-illustrations.jpg"
+                    alt="screen illustrations"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay-category-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-titl-img">
                   <h2 class="category-titl">Screen Illustrations</h2>
                   <p class="category-text main-text">Design</p>
@@ -161,12 +191,19 @@
             </li>
             <li class="category-item">
               <a href="#" class="category-item-photo link"
-                ><img
-                  src="./images/images-portfolio/blok2/photo3-online-courses.jpg"
-                  alt="online courses"
-                  width="360"
-                  height="300"
-                />
+                ><div class="overlay-category">
+                  <img
+                    src="./images/images-portfolio/blok2/photo3-online-courses.jpg"
+                    alt="online courses"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay-category-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-titl-img">
                   <h2 class="category-titl">Online Courses</h2>
                   <p class="category-text main-text">Marketing</p>
@@ -175,12 +212,19 @@
             </li>
             <li class="category-item">
               <a href="#" class="category-item-photo link"
-                ><img
-                  src="./images/images-portfolio/blok3/photo1-instagsam-stories-concept.jpg"
-                  alt="stories concept"
-                  width="360"
-                  height="300"
-                />
+                ><div class="overlay-category">
+                  <img
+                    src="./images/images-portfolio/blok3/photo1-instagsam-stories-concept.jpg"
+                    alt="stories concept"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay-category-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-titl-img">
                   <h2 class="category-titl">Instagram Stories Concept</h2>
                   <p class="category-text main-text">Design</p>
@@ -189,12 +233,19 @@
             </li>
             <li class="category-item">
               <a href="#" class="category-item-photo link"
-                ><img
-                  src="./images/images-portfolio/blok3/photo2-organic-food.jpg"
-                  alt="organic food"
-                  width="360"
-                  height="300"
-                />
+                ><div class="overlay-category">
+                  <img
+                    src="./images/images-portfolio/blok3/photo2-organic-food.jpg"
+                    alt="organic food"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay-category-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-titl-img">
                   <h2 class="category-titl">Organic Food</h2>
                   <p class="category-text main-text">Web Site</p>
@@ -203,12 +254,19 @@
             </li>
             <li class="category-item">
               <a href="#" class="category-item-photo link"
-                ><img
-                  src="./images/images-portfolio/blok3/photo3-fresh-coffee.jpg"
-                  alt="fresh coffee"
-                  width="360"
-                  height="300"
-                />
+                ><div class="overlay-category">
+                  <img
+                    src="./images/images-portfolio/blok3/photo3-fresh-coffee.jpg"
+                    alt="fresh coffee"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay-category-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-titl-img">
                   <h2 class="category-titl">Fresh Coffee</h2>
                   <p class="category-text main-text">Web Site</p>
@@ -284,6 +342,5 @@
         </div>
       </div>
     </footer>
-   
   </body>
 </html>
