--- a/studio.html
+++ b/studio.html
@@ -37,7 +37,7 @@
             <li>
               <a href="./portfolio.html" class="header-item link">Portfolio</a>
             </li>
-            <li><a href="" class="header-item link">Contacts</a></li>
+            <li><a href="" class="header-item activ-page link">Contacts</a></li>
           </ul>
         </nav>
         <address class="header-address">
